@@ -116,6 +116,8 @@
 	- Grand Renaming of rpm data types.
 	- fix: synthesize unpacking progress callbacks for packages w/o files.
 	- add rpmds/rpmfi/rpmts methods to bindings.
+	- re-enable rpm-python sub-package.
+	- fix: resurrect "()(64bit)" markings using objdump.
 
 4.0.3 -> 4.0.4:
 	- solaris: translate i86pc to i386 (#57182).
